--- a/src/index.css
+++ b/src/index.css
@@ -366,7 +366,6 @@ li {
     background: #fff;
     border-radius: 8px;
     padding-block: 70px;
-    padding-inline: auto;
 }
 
 .message-icon{
@@ -396,6 +395,44 @@ li {
 .brand-badge:hover .rotate{
     animation-play-state: paused;
 }
+.card-btn2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.card-btn2 button {
+    border: none;
+    border-radius: 50%;
+    padding: 15px 20px;
+    background-color: #fff0fa;
+    border: 1px solid #fff0fa;
+    transition: 0.3s all linear;
+}
+.card-btn2 button:hover{
+    background: linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094) !important;
+    color: white;
+}
+.card-btn2 i {
+    color: black;
+    font-size: 20px;
+    font-weight: bolder;
+}
+.project-card{
+    transition: 0.3s;
+    position: relative;
+    z-index: 999;
+}
+.project-card:hover{
+    transform: translateY(-10px);
+}
+.project-content{
+    font-size: 10px;
+    line-height: 20px;
+}
+.project-content:hover{
+    color: #fe0094;
+}
+
 
 @keyframes left-right {
     0% {
