--- a/src/index.css
+++ b/src/index.css
@@ -97,9 +97,9 @@ li {
 
 .service-bg {
     padding-top: 120px;
+    padding-bottom: 60px;
     background-image: url('./public/image/service__bg__img.677353e5.png');
     background-color: #fff0fa;
-    height: 100vh;
     background-size: cover;
 }
 
