--- a/src/index.css
+++ b/src/index.css
@@ -432,7 +432,99 @@ li {
 .project-content:hover{
     color: #fe0094;
 }
-
+.contact-title-button span{
+    color: black;
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 1;
+    border: 1px solid #eacadf;
+    padding: 10px 26px;
+    border-radius: 50px;
+    display: inline-block
+}
+.text-contact-gradient {
+   text-decoration: transparent;
+    color:  linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094);
+}
+.contact-title-h3{
+    color: #0a0624;
+    text-align: center;
+    font-size: 37px;
+    font-weight: 700;
+    line-height: 50px;
+    margin: 0;
+}
+.contact-input-wrapper{
+    padding: 70px 70px 75px;
+    border-radius: 8px;
+    border: 1px solid #eee;
+}
+.contact-input{
+    width: 100%;
+    height: 58px;
+    border: 1px solid #eee;
+    background: #fff;
+    padding: 0 20px;
+    border-radius: 8px;
+    margin-bottom: 25px;
+}
+.contact-input-wrapper textarea{
+    height: 150px;
+    padding-top: 25px;
+}
+.contact-button{
+    padding: 20px 45px;
+    background: linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094);;
+    color: #fff;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    border-radius:8px;
+    border: none;
+    font-family: "Source Sans Pro";;
+    transition: .3s;
+    display: inline-block;
+}
+.contact-info{
+    padding: 45px 40px 10px 50px;
+    background: linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094);
+    margin-bottom: 30px;
+    border-radius:8px;
+}
+.contact-single-item{
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+    flex-wrap: wrap;
+}
+.contact-icon span{
+    height: 62px;
+    width: 62px;
+    line-height: 62px;
+    background: #fff;
+    border-radius: 100%;
+    display: inline-block;
+    text-align: center;
+    color:#fe0094;
+}
+.contact-icon{
+    margin-right: 25px;
+}
+.contact-text h6{
+    font-size: 17px;
+    font-weight: 400;
+    text-decoration-line: underline;
+    color: #fff;
+    margin: 0 0 10px;
+}
+.contact-text p{
+    color:  #fff;
+    margin: 0;
+}
+.pl-70{
+    padding-left: 70px;
+}
 
 @keyframes left-right {
     0% {
