--- a/src/index.css
+++ b/src/index.css
@@ -525,7 +525,31 @@ li {
 .pl-70{
     padding-left: 70px;
 }
-
+.pb-120{
+    padding-bottom: 120px;
+}
+.brand{
+    background:linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094);
+}
+.sp-40 {
+    padding: 40px 0;
+}
+.barnd-inner{
+    display: flex !important;
+    align-items: center;
+    justify-content: space-between;
+}
+.bg-blog{
+    background-color: #fff0fa;
+}
+.blog-heading h3{
+    color: #0a0624;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+    line-height: 50px;
+    margin: 0;
+}
 @keyframes left-right {
     0% {
         transform: translateX(0px);
