--- a/src/index.css
+++ b/src/index.css
@@ -410,7 +410,7 @@ li {
 }
 .card-btn2 button:hover{
     background: linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094) !important;
-    color: white;
+    color: white !important;
 }
 .card-btn2 i {
     color: black;
@@ -472,20 +472,7 @@ li {
     height: 150px;
     padding-top: 25px;
 }
-.contact-button{
-    padding: 20px 45px;
-    background: linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094);;
-    color: #fff;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    border-radius:8px;
-    border: none;
-    font-family: "Source Sans Pro";;
-    transition: .3s;
-    display: inline-block;
-}
+
 .contact-info{
     padding: 45px 40px 10px 50px;
     background: linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094);
@@ -541,6 +528,7 @@ li {
 }
 .bg-blog{
     background-color: #fff0fa;
+    padding-block: 80px;
 }
 .blog-heading h3{
     color: #0a0624;
@@ -550,6 +538,230 @@ li {
     line-height: 50px;
     margin: 0;
 }
+
+.text-blog-gradient{
+    background: linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094);
+}
+.blog-btn{
+    background:#18239d;
+    padding: 20px 50px;
+    border: 1px solid #18239d;
+    color: #fff;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    border-radius: 8px;
+    transition: .3s;
+    display: inline-block;
+}
+.blog-btn:hover{
+    background: transparent;
+    color:#18239d;
+}
+.blog-single{
+    display: flex;
+    align-items: center;
+    border-top: 1px solid #eacadf;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.blog-image{
+    margin-right: 65px;
+    transition:0.3s;
+}
+.blog-image img{
+    width: 100%;
+    margin-right: 65px;
+}
+.blog-date-inner{
+    background: #fff;
+    text-align: center;
+    width: 164px;
+    transition: 0.3s;
+    border-radius: 8px;
+    height: 164px;
+    margin-right: 75px;
+    align-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    z-index: 15;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, .05);
+}
+.blog-date span {
+    color:#0a0624;
+    font-size: 50px;
+    font-weight: 700;
+    line-height: 60px;
+    width: 100%;
+}
+.blog-date p {
+    margin: 0;
+    font-size: 15px;
+    font-weight: 600;
+    line-height: 30px;
+    width: 100%;
+}
+.blog-date-inner:hover{
+    background: linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094);
+    color: #fff;
+}
+
+.blog-single:hover{
+    opacity: 1;
+}
+.blog-date::after{
+    opacity: 1;
+}
+.blog-content{
+    max-width: 470px;
+    margin-right: 110px;
+}
+.blog-content h6 {
+    margin: 0 0 13px;
+}
+.blog-content h6{
+    font-size: 25px;
+    font-weight: 600;
+    line-height: 33px;
+    color:#0a0624;
+    text-transform: uppercase;
+}
+.blog-content p {
+    line-height: 32px;
+    margin: 0;
+    color: #5f6c76;
+    font-size: 17px;
+}
+.blog-icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.blog-icon button {
+    border: none;
+    border-radius: 50%;
+    padding: 15px 20px;
+    background-color: white;
+    border: 1px solid #fff0fa;
+    transition: 0.3s all linear;
+}
+.blog-icon button:hover{
+    background: linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094) !important;
+}
+.blog-icon button i:hover{
+     color: white !important;
+}
+.blog-icon i {
+    color: black;
+    font-size: 20px;
+    font-weight: bolder;
+}
+footer{
+    background-color: #fff0fa;
+}
+.bg-footer{
+    background-image: url(../public/image/footer.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 700px;
+}
+.footer-logo{
+    margin-bottom: 40px;
+}
+.footer-text p {
+    color: #fff;
+    font-weight: 400;
+    line-height: 40px;
+    font-size: 20px;
+    margin: 0;
+}
+.footer-icons ul li {
+    margin-right: 10px;
+}
+.footer-icons ul li span {
+    width: 52px;
+    height: 52px;
+    line-height: 52px;
+    text-align: center;
+    border-radius: 100%;
+    background: #fff;
+    display: inline-block;
+    color:#0a0624;
+    font-size: 15px;
+    font-weight: 400;
+}
+ul {
+    margin: 0;
+    padding: 0;
+}
+.footer-menu-title h6 {
+    font-size: 18px;
+    font-weight: 700;
+    color: white;
+    position: relative;
+    margin: 0;
+    line-height: 1.7;
+    display: inline-block;
+}
+.footer-menu-title h6:after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 2px;
+    background:white;
+    left: 0;
+    bottom: 0;
+}
+.footer-menu ul li {
+    display: block;
+}
+.footer-menu ul li span{
+    color:#fff;
+    font-weight: 400;
+    margin-bottom: 15px;
+    display: block;
+    font-size: 17px;
+}
+.footer-input {
+    margin-bottom: 20px;
+}
+.footer-input input {
+    width: 100%;
+    padding: 10px 20px;
+    background: #fff;
+    border-radius: 4px;
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 32px;
+    border: 1px solid #fff;
+    height: 60px;
+}
+.copyright{
+    background-color: rgba(255, 240, 250, .05);
+    padding: 15px 47px;
+    position: relative;
+    border-radius: 0;
+}
+.copyright-left p {
+    font-weight: 400;
+    line-height: 40px;
+    color: #fff;
+    margin: 0;
+}
+.copyright-left p a{
+    color:#fe0094 !important;
+    font-weight: 700;
+}
+a{
+    text-decoration: none;
+}
+.copyright-right ul li a {
+    margin: 0;
+    color:#fff;
+}
+
 @keyframes left-right {
     0% {
         transform: translateX(0px);
