--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,12 @@ header {
     z-index: 999;
 }
 
+header nav ul li:hover {
+    color: #fe0094;
+    cursor: pointer;
+    transition: all 0.3s ease-out 0s;
+}
+
 .back-color {
     padding: 20px;
     background-color: rgba(255, 240, 250, .05) !important;
@@ -37,6 +43,7 @@ li {
 .social-icons:hover {
     background-color: #ec0294;
     border: none;
+    transition: all 0.3s ease-out 0s;
 }
 
 .main-h1 {
@@ -57,6 +64,11 @@ li {
     font-family: "Source Sans Pro";
     transition: .3s;
     display: inline-block;
+}
+
+.all-btn:hover {
+    filter: brightness(150%);
+    color: #fff;
 }
 
 .hero-img:after {
@@ -131,31 +143,38 @@ li {
     overflow: hidden;
     transition: 0.3s all linear;
 }
-.service-card:hover{
+
+.service-card:hover {
     background: linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094);
     transform: translateY(-15px);
 }
-.service-card h4,p{
+
+.service-card h4,
+p {
     transition: 0.4s all linear;
 }
-.service-card:hover h4{
+
+.service-card:hover h4 {
     color: #fff;
 }
-.service-card:hover p{
+
+.service-card:hover p {
     color: #fff;
 }
-.service-card:hover .service-img-bg{
+
+.service-card:hover .service-img-bg {
     visibility: visible;
     left: -25px;
     top: -60px;
     transition: 0.3s all linear;
-    
+
 }
-.service-img-bg{
+
+.service-img-bg {
     position: absolute;
     left: -35px;
     top: -50px;
-    visibility: hidden;    
+    visibility: hidden;
 }
 
 .card-text {
@@ -199,6 +218,7 @@ li {
     position: relative;
 
 }
+
 .testimonial-inner {
     padding: 70px;
     background: #fff0fa;
@@ -233,7 +253,8 @@ li {
     position: absolute;
     animation: left-right 2s linear infinite;
 }
-.width-50{
+
+.width-50 {
     display: inline-block;
     position: absolute;
     top: -90px;
@@ -242,7 +263,8 @@ li {
     width: 200px !important;
     z-index: 999;
 }
-.width-50 img{
+
+.width-50 img {
     transform: rotate(265deg);
 
 }
@@ -338,6 +360,12 @@ li {
     opacity: .6;
 }
 
+.team-name:hover {
+    color: #fe0094;
+    cursor: pointer;
+    transition: all 0.3s ease-out 0s;
+}
+
 .profile-hover {
     transition: 0.3s;
     position: relative;
@@ -355,25 +383,28 @@ li {
     top: -20px;
     animation: left-right 2s linear infinite;
 }
-.project-section{
+
+.project-section {
     background-color: #fff0fa;
     height: 100vh;
     background-size: cover;
     border-radius: 8px;
     padding: 90px 0px 70px 0px;
 }
-.project-box{
+
+.project-box {
     background: #fff;
     border-radius: 8px;
     padding-block: 70px;
 }
 
-.message-icon{
+.message-icon {
     position: absolute;
     left: 74px;
     top: 74px;
 }
-.project-title h3{
+
+.project-title h3 {
     color: #0a0624;
     text-align: left;
     font-size: 37px;
@@ -381,25 +412,32 @@ li {
     line-height: 50px;
     margin: 0;
 }
-.project-title span{
+
+.project-title span {
     color: #fe0094;
     text-decoration: underline;
 }
-.rotate{
+
+.rotate {
     animation: rotate 10s linear infinite;
 }
-.brand-badge{
+
+.brand-badge {
     cursor: pointer;
+    top: -40px;
 
 }
-.brand-badge:hover .rotate{
+
+.brand-badge:hover .rotate {
     animation-play-state: paused;
 }
-.card-btn2{
+
+.card-btn2 {
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .card-btn2 button {
     border: none;
     border-radius: 50%;
@@ -408,31 +446,40 @@ li {
     border: 1px solid #fff0fa;
     transition: 0.3s all linear;
 }
-.card-btn2 button:hover{
+
+.card-btn2 button:hover {
     background: linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094) !important;
     color: white !important;
 }
+
 .card-btn2 i {
     color: black;
     font-size: 20px;
     font-weight: bolder;
 }
-.project-card{
+
+.project-card {
     transition: 0.3s;
     position: relative;
     z-index: 999;
 }
-.project-card:hover{
+
+.project-card:hover {
     transform: translateY(-10px);
 }
-.project-content{
+
+.project-content {
     font-size: 10px;
     line-height: 20px;
 }
-.project-content:hover{
+
+.project-content h3:hover {
     color: #fe0094;
+    cursor: pointer;
+    transition: all 0.3s ease-out 0s;
 }
-.contact-title-button span{
+
+.contact-title-button span {
     color: black;
     font-size: 17px;
     font-weight: 500;
@@ -442,11 +489,13 @@ li {
     border-radius: 50px;
     display: inline-block
 }
+
 .text-contact-gradient {
-   text-decoration: transparent;
-    color:  linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094);
+    text-decoration: transparent;
+    color: linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094);
 }
-.contact-title-h3{
+
+.contact-title-h3 {
     color: #0a0624;
     text-align: center;
     font-size: 37px;
@@ -454,12 +503,14 @@ li {
     line-height: 50px;
     margin: 0;
 }
-.contact-input-wrapper{
+
+.contact-input-wrapper {
     padding: 70px 70px 75px;
     border-radius: 8px;
     border: 1px solid #eee;
 }
-.contact-input{
+
+.contact-input {
     width: 100%;
     height: 58px;
     border: 1px solid #eee;
@@ -468,24 +519,27 @@ li {
     border-radius: 8px;
     margin-bottom: 25px;
 }
-.contact-input-wrapper textarea{
+
+.contact-input-wrapper textarea {
     height: 150px;
     padding-top: 25px;
 }
 
-.contact-info{
+.contact-info {
     padding: 45px 40px 10px 50px;
     background: linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094);
     margin-bottom: 30px;
-    border-radius:8px;
+    border-radius: 8px;
 }
-.contact-single-item{
+
+.contact-single-item {
     display: flex;
     align-items: center;
     margin-bottom: 30px;
     flex-wrap: wrap;
 }
-.contact-icon span{
+
+.contact-icon span {
     height: 62px;
     width: 62px;
     line-height: 62px;
@@ -493,44 +547,54 @@ li {
     border-radius: 100%;
     display: inline-block;
     text-align: center;
-    color:#fe0094;
+    color: #fe0094;
 }
-.contact-icon{
+
+.contact-icon {
     margin-right: 25px;
 }
-.contact-text h6{
+
+.contact-text h6 {
     font-size: 17px;
     font-weight: 400;
     text-decoration-line: underline;
     color: #fff;
     margin: 0 0 10px;
 }
-.contact-text p{
-    color:  #fff;
+
+.contact-text p {
+    color: #fff;
     margin: 0;
 }
-.pl-70{
+
+.pl-70 {
     padding-left: 70px;
 }
-.pb-120{
+
+.pb-120 {
     padding-bottom: 120px;
 }
-.brand{
-    background:linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094);
+
+.brand {
+    background: linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094);
 }
+
 .sp-40 {
     padding: 40px 0;
 }
-.barnd-inner{
+
+.barnd-inner {
     display: flex !important;
     align-items: center;
     justify-content: space-between;
 }
-.bg-blog{
+
+.bg-blog {
     background-color: #fff0fa;
     padding-block: 80px;
 }
-.blog-heading h3{
+
+.blog-heading h3 {
     color: #0a0624;
     text-align: center;
     font-size: 35px;
@@ -539,11 +603,26 @@ li {
     margin: 0;
 }
 
-.text-blog-gradient{
+.text-blog-gradient {
+    background: linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    position: relative;
+    
+}
+.text-blog-gradient:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 5px;
+    bottom: 0;
+    left: 0;
+    z-index: 99;
     background: linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094);
 }
-.blog-btn{
-    background:#18239d;
+
+.blog-btn {
+    background: #18239d;
     padding: 20px 50px;
     border: 1px solid #18239d;
     color: #fff;
@@ -555,26 +634,31 @@ li {
     transition: .3s;
     display: inline-block;
 }
-.blog-btn:hover{
+
+.blog-btn:hover {
     background: transparent;
-    color:#18239d;
+    color: #18239d;
 }
-.blog-single{
+
+.blog-single {
     display: flex;
     align-items: center;
     border-top: 1px solid #eacadf;
     padding-top: 20px;
     padding-bottom: 20px;
 }
-.blog-image{
+
+.blog-image {
     margin-right: 65px;
-    transition:0.3s;
+    transition: 0.3s;
 }
-.blog-image img{
+
+.blog-image img {
     width: 100%;
     margin-right: 65px;
 }
-.blog-date-inner{
+
+.blog-date-inner {
     background: #fff;
     text-align: center;
     width: 164px;
@@ -589,13 +673,15 @@ li {
     z-index: 15;
     box-shadow: 0 4px 20px rgba(0, 0, 0, .05);
 }
+
 .blog-date span {
-    color:#0a0624;
+    color: #0a0624;
     font-size: 50px;
     font-weight: 700;
     line-height: 60px;
     width: 100%;
 }
+
 .blog-date p {
     margin: 0;
     font-size: 15px;
@@ -603,42 +689,57 @@ li {
     line-height: 30px;
     width: 100%;
 }
-.blog-date-inner:hover{
+
+.blog-date-inner:hover {
     background: linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094);
     color: #fff;
 }
+.blog-date-inner span {
+    transition: 0.3s all linear;
+}
+.blog-date-inner:hover span {
+    color: #fff;
 
-.blog-single:hover{
+}
+
+.blog-single:hover {
     opacity: 1;
 }
-.blog-date::after{
+
+.blog-date::after {
     opacity: 1;
 }
-.blog-content{
+
+.blog-content {
     max-width: 470px;
     margin-right: 110px;
 }
+
 .blog-content h6 {
     margin: 0 0 13px;
 }
-.blog-content h6{
+
+.blog-content h6 {
     font-size: 25px;
     font-weight: 600;
     line-height: 33px;
-    color:#0a0624;
+    color: #0a0624;
     text-transform: uppercase;
 }
+
 .blog-content p {
     line-height: 32px;
     margin: 0;
     color: #5f6c76;
     font-size: 17px;
 }
-.blog-icon{
+
+.blog-icon {
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .blog-icon button {
     border: none;
     border-radius: 50%;
@@ -647,29 +748,36 @@ li {
     border: 1px solid #fff0fa;
     transition: 0.3s all linear;
 }
-.blog-icon button:hover{
+
+.blog-icon button:hover {
     background: linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094) !important;
 }
-.blog-icon button i:hover{
-     color: white !important;
+
+.blog-icon button i:hover {
+    color: white !important;
 }
+
 .blog-icon i {
     color: black;
     font-size: 20px;
     font-weight: bolder;
 }
-footer{
+
+footer {
     background-color: #fff0fa;
 }
-.bg-footer{
+
+.bg-footer {
     background-image: url(../public/image/footer.png);
     background-size: cover;
     background-repeat: no-repeat;
     height: 700px;
 }
-.footer-logo{
+
+.footer-logo {
     margin-bottom: 40px;
 }
+
 .footer-text p {
     color: #fff;
     font-weight: 400;
@@ -677,9 +785,11 @@ footer{
     font-size: 20px;
     margin: 0;
 }
+
 .footer-icons ul li {
     margin-right: 10px;
 }
+
 .footer-icons ul li span {
     width: 52px;
     height: 52px;
@@ -688,14 +798,22 @@ footer{
     border-radius: 100%;
     background: #fff;
     display: inline-block;
-    color:#0a0624;
+    color: #0a0624;
     font-size: 15px;
     font-weight: 400;
 }
+
+.footer-icons ul li span:hover {
+    color: #fff;
+    background-color: #fe0094;
+    transition: all 0.3s ease-out 0s;
+}
+
 ul {
     margin: 0;
     padding: 0;
 }
+
 .footer-menu-title h6 {
     font-size: 18px;
     font-weight: 700;
@@ -705,28 +823,39 @@ ul {
     line-height: 1.7;
     display: inline-block;
 }
+
 .footer-menu-title h6:after {
     position: absolute;
     content: "";
     width: 100%;
     height: 2px;
-    background:white;
+    background: white;
     left: 0;
     bottom: 0;
 }
+
 .footer-menu ul li {
     display: block;
 }
-.footer-menu ul li span{
-    color:#fff;
+
+.footer-menu ul li span {
+    color: #fff;
     font-weight: 400;
     margin-bottom: 15px;
     display: block;
     font-size: 17px;
 }
+
+.footer-menu ul li span:hover {
+    color: #fe0094;
+    transition: all 0.3s ease-out 0s;
+    cursor: pointer;
+}
+
 .footer-input {
     margin-bottom: 20px;
 }
+
 .footer-input input {
     width: 100%;
     padding: 10px 20px;
@@ -738,28 +867,38 @@ ul {
     border: 1px solid #fff;
     height: 60px;
 }
-.copyright{
+
+.copyright {
     background-color: rgba(255, 240, 250, .05);
     padding: 15px 47px;
     position: relative;
     border-radius: 0;
 }
+
 .copyright-left p {
     font-weight: 400;
     line-height: 40px;
     color: #fff;
     margin: 0;
 }
-.copyright-left p a{
-    color:#fe0094 !important;
+
+.copyright-left p a {
+    color: #fe0094 !important;
     font-weight: 700;
 }
-a{
+
+a {
     text-decoration: none;
 }
+
 .copyright-right ul li a {
     margin: 0;
-    color:#fff;
+    color: #fff;
+}
+
+.copyright-right ul li a:hover {
+    color: #fe0094;
+    transition: all 0.3s ease-out 0s;
 }
 
 @keyframes left-right {
@@ -775,11 +914,13 @@ a{
         transform: translateX(0px);
     }
 }
+
 @keyframes rotate {
-        0%{
-            transform: rotate(0);  
-        }
-        100%{
-            transform: rotate(1turn);  
-        }
+    0% {
+        transform: rotate(0);
+    }
+
+    100% {
+        transform: rotate(1turn);
+    }
 }
