--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 .hero-section {
     background-image: url('./public/image/herobanner__1.d2f38a2d.jpg');
-    height: 100vh;
     background-size: cover;
     position: relative;
     z-index: 99;
@@ -386,7 +385,6 @@ p {
 
 .project-section {
     background-color: #fff0fa;
-    height: 100vh;
     background-size: cover;
     border-radius: 8px;
     padding: 90px 0px 70px 0px;
@@ -608,8 +606,9 @@ p {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     position: relative;
-    
+
 }
+
 .text-blog-gradient:before {
     content: '';
     position: absolute;
@@ -694,9 +693,11 @@ p {
     background: linear-gradient(90deg, #00229e, #6e1299 47.92%, #fe0094);
     color: #fff;
 }
+
 .blog-date-inner span {
     transition: 0.3s all linear;
 }
+
 .blog-date-inner:hover span {
     color: #fff;
 
@@ -922,5 +923,29 @@ a {
 
     100% {
         transform: rotate(1turn);
+    }
+}
+
+.height-100 {
+    height: 100%;
+}
+
+@media (max-width:992px) {
+    .height-100 {
+        padding-top: 120px;
+    }
+
+    .testimonial-inner {
+        padding: 30px;
+        background: #fff0fa;
+        margin-right: 0px;
+        margin-top: 30px;
+        margin-left: 0px;
+        border-radius: 8px;
+        /* width: 100%; */
+    }
+
+    .pl-70{
+        padding: 0;
     }
 }
