--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@
     z-index: 99;
     overflow: hidden;
 }
-
 header {
     position: absolute;
     width: 100%;
@@ -43,6 +42,9 @@ li {
     background-color: #ec0294;
     border: none;
     transition: all 0.3s ease-out 0s;
+}
+.logo {
+    max-width: 150px;
 }
 
 .main-h1 {
@@ -660,10 +662,10 @@ p {
 .blog-date-inner {
     background: #fff;
     text-align: center;
-    width: 164px;
+    width: 100%;
     transition: 0.3s;
     border-radius: 8px;
-    height: 164px;
+    height: 100%;
     margin-right: 75px;
     align-content: center;
     display: flex;
@@ -713,7 +715,7 @@ p {
 
 .blog-content {
     max-width: 470px;
-    margin-right: 110px;
+    
 }
 
 .blog-content h6 {
@@ -764,6 +766,10 @@ p {
     font-weight: bolder;
 }
 
+.height-100 {
+    height: 100%;
+}
+
 footer {
     background-color: #fff0fa;
 }
@@ -772,8 +778,9 @@ footer {
     background-image: url(../public/image/footer.png);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 700px;
+    padding: 60px 0;
 }
+
 
 .footer-logo {
     margin-bottom: 40px;
@@ -902,6 +909,62 @@ a {
     transition: all 0.3s ease-out 0s;
 }
 
+@media (max-width: 991px) {
+    .footer-logo {
+        text-align: center;
+    }
+
+    .footer-menu-title h6 {
+        font-size: 16px;
+    }
+
+    .footer-input input {
+        font-size: 15px;
+    }
+
+    .footer-icons ul li {
+        margin-right: 8px;
+    }
+
+    .footer-menu ul li span {
+        font-size: 16px;
+    }
+
+    .footer-menu,
+    .footer-input {
+        padding-left: 0;
+    }
+
+    .copyright {
+        padding: 15px 20px;
+    }
+
+    .footer-icons ul {
+        justify-content: center;
+        margin-top: 20px;
+    }
+
+    .footer-icons ul li {
+        margin-right: 10px;
+    }
+}
+
+@media (max-width: 576px) {
+    .bg-footer {
+        height: 600px;
+    }
+
+    .footer-logo img {
+        max-width: 150px;
+    }
+
+    .footer-text p {
+        font-size: 16px;
+    }
+
+    
+}
+
 @keyframes left-right {
     0% {
         transform: translateX(0px);
@@ -926,9 +989,7 @@ a {
     }
 }
 
-.height-100 {
-    height: 100%;
-}
+
 
 @media (max-width:992px) {
     .height-100 {
@@ -942,10 +1003,53 @@ a {
         margin-top: 30px;
         margin-left: 0px;
         border-radius: 8px;
-        /* width: 100%; */
     }
 
     .pl-70{
         padding: 0;
+    }
+}
+@media (max-width: 991px) {
+    .nav-container nav ul {
+        display: none;
+    }
+
+    .hamburger-menu {
+        display: block;
+        cursor: pointer;
+    }
+
+    .hamburger-menu i {
+        font-size: 30px;
+        color: white;
+    }
+
+    .social-icons {
+        width: 30px;
+        height: 30px;
+    }
+}
+
+
+.menu-active ul {
+    display: block;
+    position: absolute;
+    top: 80px;
+    left: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    text-align: center;
+}
+
+.menu-active ul li {
+    padding: 10px 0;
+    color: white;
+}
+
+
+@media (max-width: 576px) {
+    .social-icons {
+        width: 25px;
+        height: 25px;
     }
 }
